--- a/index.html
+++ b/index.html
@@ -9,7 +9,48 @@
 </head>
 
 <body>
-  
+<div class="home">
+    <div class="logo-container">
+        <img src="headphone-removebg-preview.png">
+        <div class="logo-text">FAITH</div>
+        <h1 class="quote">If everyone is bring their all, you bring your all and more. <br> -Faith</h1>
+    </div>
+    
+    <div class="records">
+        <div class="records-container">
+            <div class="RC-slide">
+                <img class="record-image" id="college"src="College Fluent Website Album Record.png"> 
+            </div>
+            <div class="RC-slide">
+                <img class="record-image" id="adventure" src="Adventure Game Album Record.png">
+            </div>
+            <div class="RC-slide">
+                <img class="record-image" id="music" src="Music Genre Quiz Album Record.png">
+            </div>
+            <div class="RC-slide">
+                <img class="record-image" id="password"  src="Password Generator Album Record.png">
+            </div>
+            <div class="RC-slide">
+                <img class="record-image" src="Music Genre Quiz Album Record.png">
+            </div>
+            <div class="RC-slide">
+                <img class="record-image" id="college"src="College Fluent Website Album Record.png"> 
+            </div>
+            <div class="RC-slide">
+                <img class="record-image" id="adventure" src="Adventure Game Album Record.png">
+            </div>
+            <div class="RC-slide">
+                <img class="record-image" id="music" src="Music Genre Quiz Album Record.png">
+            </div>
+            <div class="RC-slide">
+                <img class="record-image" src="Music Genre Quiz Album Record.png">
+            </div>
+            <div class="RC-slide">
+                <img class="record-image" src="Music Genre Quiz Album Record.png">
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
@@ -17,7 +58,6 @@
 
 
 
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
