--- a/index.html
+++ b/index.html
@@ -225,7 +225,16 @@
 </div>
 </div>
 
-<div id="contacts">
+<div class="contacts">
+    <div class="linkedin-icon">
+        <a href="https://www.linkedin.com/in/faith-ajibola-86b8b226b/">
+        <img class="gmail-link" src="1200x630wa-removebg-preview.png"></a>
+    </div>
+    <div class="gmail-icon">
+        <a href="#">
+            <img class="gmail-link" src="Gmail-logo-removebg-preview.png">
+        </a>
+    </div>
 
 </div>
 
