adjusted icon size
adjusted icon size

--- a/index.html
+++ b/index.html
@@ -226,16 +226,17 @@
 </div>
 
 <div class="contacts">
+    <div class="contact-container">
     <div class="linkedin-icon">
         <a href="https://www.linkedin.com/in/faith-ajibola-86b8b226b/">
-        <img class="gmail-link" src="1200x630wa-removebg-preview.png"></a>
+        <img class="link-link" src="1200x630wa-removebg-preview.png"></a>
     </div>
     <div class="gmail-icon">
         <a href="#">
             <img class="gmail-link" src="Gmail-logo-removebg-preview.png">
         </a>
     </div>
-
+</div>
 </div>
 
 
